# data-stream-demo

./: .replit  README.md  pyproject.toml
consumer/: Dockerfile  Makefile  consumer.py  requirementes.txt
producer/: Dockerfile  Makefile  app.py  producer.py  requirementes.txt
