[tool.poetry]
name = "repl_python3_data-stream-demo"
version = "0.1.0"
description = ""
authors = ["juanengml <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
console-logging = "^0.0.5"
kombu = "^5.1.0"
pandas = "^1.3.1"
pymongo = "^3.12.0"
streamlit = "^0.85.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
